k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: theteuzin/pago-test:v2
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads-storage
              mountPath: /app/uploads
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: uploads-pvc
